--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ gunicorn==20.1.0
 jsonfield==3.1.0
 Pillow==8.3.2
 pytz==2021.1
+six==1.16.0
 sqlparse==0.4.1
 swapper==1.1.2.post1
 whitenoise==5.3.0
